--- a/app/src/main/res/layout/activity_media_play.xml
+++ b/app/src/main/res/layout/activity_media_play.xml
@@ -15,7 +15,7 @@
   </data>
   <RelativeLayout
       android:padding="5dp"
-      android:background="@drawable/background"
+      android:alpha="0.3"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <RelativeLayout
