--- a/app/src/main/res/layout/activity_media_sheet_detail.xml
+++ b/app/src/main/res/layout/activity_media_sheet_detail.xml
@@ -6,30 +6,31 @@
             name="vm"
             type="com.merlin.model.ActivityMediaSheetDetailModel" />
         <import type="android.view.View"/>
+        <import type="com.merlin.util.StatusBar"/>
     </data>
 
     <LinearLayout
         android:layout_margin="10dp"
         android:orientation="vertical"
+        binding:enableBarPadding="@{0}"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include
-            layout="@layout/title" />
+        <include layout="@layout/title" />
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="15dp">
+                android:layout_height="wrap_content">
                 <ImageView
                     android:id="@+id/activityMediaSheetDetail_coverIV"
                     android:src="@drawable/test"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"/>
+                    android:scaleType="centerCrop"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"/>
                 <LinearLayout
                     android:layout_toRightOf="@id/activityMediaSheetDetail_coverIV"
                     android:orientation="vertical"
@@ -38,17 +39,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:text="@{vm.sheet.name}"
-                        android:textColor="@color/textTitle"
+                        android:text="@{vm.sheet.title}"
                         android:textStyle="bold"
-                        android:maxLines="2"
-                        android:textSize="@dimen/textTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:singleLine="true"
+                        style="@style/titleNormalTextView"/>
                     <TextView
-                        android:text="LuckMerlin"
+                        android:text="@{vm.sheet.createUser.name}"
                         android:textColor="@color/textTitleSub"
                         android:textSize="@dimen/textMedium"
+                        android:singleLine="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                     <TextView
@@ -61,9 +60,30 @@
             </RelativeLayout>
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp">
-
+                android:layout_width="match_parent"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:layout_height="50dp">
+                <ImageView
+                    android:src="@drawable/selector_back"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <ImageView
+                    android:src="@drawable/selector_back"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
+                <ImageView
+                    android:src="@drawable/selector_back"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
+                <ImageView
+                    android:src="@drawable/selector_back"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
 
