--- a/app/src/main/res/layout/item_media_sheet.xml
+++ b/app/src/main/res/layout/item_media_sheet.xml
@@ -8,6 +8,8 @@
 
 </data>
     <RelativeLayout
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
@@ -18,7 +20,7 @@
             android:layout_height="120dp">
             <ImageView
                 android:src="@{sheet.imageUrl}"
-                android:padding="5dp"
+                android:scaleType="centerCrop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
