--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,13 @@
 <resources>
+
+    <style name="titleNormalTextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/textTitle</item>
+        <item name="android:textSize">@dimen/textTitle</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
+
     <style name="checkboxStyle" parent="@android:style/Widget.CompoundButton.CheckBox">
         <item name="android:button">@drawable/checkbox</item>
     </style>
