--- a/app/src/main/res/layout/activity_file_browser.xml
+++ b/app/src/main/res/layout/activity_file_browser.xml
@@ -143,7 +143,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:text="@{vm.getCurrentPath()}"
+                    android:text="@{vm.current.path}"
                     android:layout_width="wrap_content"
                     android:singleLine="true"
                     android:textSize="@dimen/textSmall"
