--- a/app/src/main/res/layout/activity_media_play.xml
+++ b/app/src/main/res/layout/activity_media_play.xml
@@ -10,11 +10,9 @@
           name="vm"
           type="com.merlin.model.MediaPlayModel" />
       <import type="com.merlin.view.OnSeekBarChangeListener"/>
-      <import type="com.merlin.player.Status"/>
-      <import type="com.merlin.player.Time"/>
   </data>
   <RelativeLayout
-      android:padding="5dp"
+      android:padding="10dp"
       android:background="@drawable/background"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
@@ -22,6 +20,7 @@
           android:id="@+id/mediaPlayTopRL"
           android:layout_alignParentTop="true"
           android:layout_width="match_parent"
+          android:layout_marginTop="10dp"
           android:padding="5dp"
           android:layout_height="wrap_content">
         <ImageView
@@ -58,164 +57,11 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
       </RelativeLayout>
-      <LinearLayout
-          android:id="@+id/mediaPlayBottomRL"
-          android:layout_alignParentBottom="true"
-          android:layout_marginBottom="16dp"
-          android:orientation="vertical"
+      <com.merlin.view.MediaPlayDisplayLayout
+          binding:enableBarPadding="@{0}"
+          android:layout_marginTop="5dp"
+          android:id="@+id/activityMediaPlay_displayRV"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-          <RelativeLayout
-              android:layout_marginTop="10dp"
-              android:layout_marginBottom="10dp"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-             <TextView
-                 android:id="@+id/mediaPlayBottomPositionTV"
-                 android:text="@{Time.formatTime(vm.position)}"
-                 android:textColor="@color/textTitle"
-                 android:layout_alignParentLeft="true"
-                 android:layout_centerVertical="true"
-                 android:textSize="@dimen/textSmall"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"/>
-
-              <TextView
-                  android:id="@+id/mediaPlayBottomDurationTV"
-                  android:text="@{Time.formatTime(vm.duration)}"
-                  android:textColor="@color/textTitle"
-                  android:layout_alignParentRight="true"
-                  android:textSize="@dimen/textSmall"
-                  android:layout_width="wrap_content"
-                  android:layout_centerVertical="true"
-                  android:layout_height="wrap_content"/>
-              <SeekBar
-                  android:id="@+id/mediaPlayBottomProgressSB"
-                  android:layout_toLeftOf="@id/mediaPlayBottomDurationTV"
-                  android:layout_toRightOf="@id/mediaPlayBottomPositionTV"
-                  binding:OnSeekBarChangeListener="@{vm.seekListener}"
-                  android:progress="@{vm.progress}"
-                  android:layout_centerVertical="true"
-                  android:layout_marginLeft="3dp"
-                  android:layout_marginRight="3dp"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:focusable="true"
-                  android:maxHeight="4.0dip"
-                  android:minHeight="4.0dip"
-                  android:paddingLeft="16.0dip"
-                  android:paddingRight="16.0dip"
-                  android:progressDrawable="@drawable/seekbar"/>
-          </RelativeLayout>
-          <LinearLayout
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_gravity="center_horizontal"
-              android:gravity="center_vertical"
-              android:orientation="horizontal">
-
-              <ImageView
-                  android:id="@+id/activityMediaPlay_playModeIV"
-                  android:onClick="@{vm::onClick}"
-                  android:src="@drawable/single_normal"
-                  android:layout_margin="8dp"
-                  android:layout_width="@dimen/iconSizeSmall"
-                  android:layout_height="@dimen/iconSizeSmall"/>
-
-              <ImageView
-                  android:id="@+id/activityMediaPlay_preIV"
-                  android:onClick="@{vm::onClick}"
-                  android:src="@drawable/selector_pre"
-                  android:layout_margin="8dp"
-                  android:layout_width="@dimen/iconSizeMedium"
-                  android:layout_height="@dimen/iconSizeMedium"/>
-
-              <ImageView
-                  android:id="@+id/activityMediaPlay_playPauseIV"
-                  android:onClick="@{vm::onClick}"
-                  android:src="@{vm.playState==Status.STATUS_PLAYING||vm.playState==Status.STATUS_PROGRESS?@drawable/selector_media_pause:@drawable/selector_media_play}"
-                  android:layout_margin="8dp"
-                  android:layout_width="@dimen/iconSizeLarge"
-                  android:layout_height="@dimen/iconSizeLarge"/>
-
-              <ImageView
-                  android:id="@+id/activityMediaPlay_nextIV"
-                  android:onClick="@{vm::onClick}"
-                  android:src="@drawable/selector_next"
-                  android:layout_margin="8dp"
-                  android:layout_width="@dimen/iconSizeMedium"
-                  android:layout_height="@dimen/iconSizeMedium"/>
-
-              <ImageView
-                  android:id="@+id/activityMediaPlay_menuIV"
-                  android:onClick="@{vm::onClick}"
-                  android:src="@drawable/menu_normal"
-                  android:layout_margin="8dp"
-                  android:layout_width="@dimen/iconSizeSmall"
-                  android:layout_height="@dimen/iconSizeSmall"/>
-          </LinearLayout>
-      </LinearLayout>
-      <RelativeLayout
-          android:layout_below="@id/mediaPlayTopRL"
-          android:layout_above="@id/mediaPlayBottomRL"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent">
-          <ImageView
-              android:layout_centerHorizontal="true"
-              android:layout_centerVertical="true"
-              android:src="@drawable/album_default"
-              android:alpha="0.3"
-              android:layout_marginBottom="20dp"
-              android:layout_width="150dp"
-              android:layout_height="150dp"/>
-         <LinearLayout
-             android:layout_width="wrap_content"
-             android:layout_alignParentBottom="true"
-             android:orientation="horizontal"
-             android:layout_centerHorizontal="true"
-             android:layout_height="wrap_content">
-             <ImageView
-                 android:src="@drawable/heart_normal"
-                 android:layout_margin="10dp"
-                 android:layout_width="@dimen/iconSizeLittle"
-                 android:layout_height="@dimen/iconSizeLittle"/>
-             <ImageView
-                 android:src="@drawable/download_media_normal"
-                 android:layout_margin="10dp"
-                 android:layout_width="@dimen/iconSizeLittle"
-                 android:layout_height="@dimen/iconSizeLittle"/>
-             <ImageView
-                 android:src="@drawable/add_sort_normal"
-                 android:layout_margin="10dp"
-                 android:layout_width="@dimen/iconSizeLittle"
-                 android:layout_height="@dimen/iconSizeLittle"/>
-
-             <ImageView
-                 android:src="@drawable/share_normal"
-                 android:layout_margin="10dp"
-                 android:layout_width="@dimen/iconSizeLittle"
-                 android:layout_height="@dimen/iconSizeLittle"/>
-         </LinearLayout>
-
-      </RelativeLayout>
-
-<!--      <include-->
-<!--        android:layout_marginTop="150dp"-->
-<!--        android:layout_marginBottom="150dp"-->
-<!--        android:layout_alignParentRight="true"-->
-<!--        android:layout_centerVertical="true"-->
-<!--        layout="@layout/media_local_scan"-->
-<!--        android:layout_width="150dp"-->
-<!--        android:layout_height="200dp"/>-->
-
-<!--      <androidx.recyclerview.widget.RecyclerView-->
-<!--          binding:adapter="@{vm.playingAdapter}"-->
-<!--          binding:layoutManager="@{vm.playingAdapter.layoutManager}"-->
-<!--          android:layout_marginTop="150dp"-->
-<!--          android:layout_marginBottom="150dp"-->
-<!--          android:layout_alignParentRight="true"-->
-<!--          android:layout_centerVertical="true"-->
-<!--          android:layout_width="wrap_content"-->
-<!--          android:layout_height="wrap_content"/>-->
+          android:layout_height="match_parent"/>
   </RelativeLayout>
 </layout>
