Add cloud music download and play

--- a/app/src/main/res/layout/media_display_sheets.xml
+++ b/app/src/main/res/layout/media_display_sheets.xml
@@ -45,7 +45,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mediaSheetLayout_sheetsRV"
             binding:adapter="@{vm.sheetAdapter}"
-            binding:layoutManager="@{Layout.layout(Layout.LINEAR_LAYOUT,false)}"
+            binding:layoutManager="@{Layout.layout(Layout.GRID_LAYOUT,Layout.VERTICAL,false,3)}"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
