--- a/app/src/main/res/layout/media_display_sheets.xml
+++ b/app/src/main/res/layout/media_display_sheets.xml
@@ -8,45 +8,55 @@
             type="com.merlin.model.MediaDisplaySheetsModel" />
         <import type="com.merlin.util.Layout"/>
     </data>
-    <LinearLayout
+    <FrameLayout
         android:layout_margin="10dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
-            android:orientation="horizontal"
+            android:visibility="@{vm.isShowingSheets()?View.VISIBLE:View.GONE}"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:text="推荐"
-                style="@style/titleNormalTextView"/>
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="25dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:text="推荐"
+                    style="@style/titleNormalTextView"/>
 
-            <TextView
-                android:text="精选"
-                style="@style/titleNormalTextView"/>
+                <TextView
+                    android:text="精选"
+                    style="@style/titleNormalTextView"/>
 
-            <TextView
-                android:text="关注"
-                style="@style/titleNormalTextView"/>
+                <TextView
+                    android:text="关注"
+                    style="@style/titleNormalTextView"/>
 
-            <TextView
-                android:text="古风"
-                style="@style/titleNormalTextView"/>
-            <TextView
-                android:text="ACG"
-                style="@style/titleNormalTextView"/>
-            <TextView
-                android:id="@+id/mediaDisplaySheet_createTV"
-                android:onClick="@{vm::onClick}"
-                android:text="Create"
-                style="@style/titleNormalTextView"/>
+                <TextView
+                    android:text="古风"
+                    style="@style/titleNormalTextView"/>
+                <TextView
+                    android:text="ACG"
+                    style="@style/titleNormalTextView"/>
+                <TextView
+                    android:id="@+id/mediaDisplaySheet_createTV"
+                    android:onClick="@{vm::onClick}"
+                    android:text="Create"
+                    style="@style/titleNormalTextView"/>
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/mediaSheetLayout_sheetsRV"
+                binding:adapter="@{vm.sheetAdapter}"
+                binding:layoutManager="@{Layout.layout(Layout.GRID_LAYOUT,Layout.VERTICAL,false,3)}"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/mediaSheetLayout_sheetsRV"
-            binding:adapter="@{vm.sheetAdapter}"
-            binding:layoutManager="@{Layout.layout(Layout.GRID_LAYOUT,Layout.VERTICAL,false,3)}"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+        <include
+            layout="@layout/media_sheet_detail"
+            android:visibility="@{vm.isShowingSheets()?View.GONE:View.VISIBLE}"/>
+    </FrameLayout>
 </layout>
