--- a/app/src/main/res/layout/activity_media_play.xml
+++ b/app/src/main/res/layout/activity_media_play.xml
@@ -42,7 +42,7 @@
             <TextView
                 android:textColor="@color/textTitle"
                 android:textSize="@dimen/textTitle"
-                android:text="@{vm.playing.name}"
+                android:text="@{vm.playing.title}"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
