--- a/app/src/main/res/layout/item_playing_media.xml
+++ b/app/src/main/res/layout/item_playing_media.xml
@@ -43,7 +43,7 @@
                 android:orientation="vertical"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:text="@{media.name}"
+                    android:text="@{media.title}"
                     android:textSize="@dimen/textMedium"
                     android:textColor="@color/textTitle"
                     android:layout_alignParentLeft="true"
