--- a/app/src/main/res/layout/item_sheet_media.xml
+++ b/app/src/main/res/layout/item_sheet_media.xml
@@ -35,7 +35,7 @@
             <TextView
                 android:textSize="@dimen/textTitle"
                 android:textColor="@color/textTitle"
-                android:text="@{media.name}"
+                android:text="@{media.title}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
