Add cloud music download and play

--- a/app/src/main/res/layout/activity_media_sheet.xml
+++ b/app/src/main/res/layout/activity_media_sheet.xml
@@ -13,7 +13,7 @@
         binding:enableBarPadding="@{0}"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include layout="@layout/title"/>
+        <include layout="@layout/status"/>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
