--- a/app/src/main/res/layout/activity_media_play.xml
+++ b/app/src/main/res/layout/activity_media_play.xml
@@ -9,61 +9,17 @@
       <variable
           name="vm"
           type="com.merlin.model.MediaPlayModel" />
+      <import type="com.merlin.binding.StatusBar"/>
+      <import type="com.merlin.client.R"/>
   </data>
   <RelativeLayout
-      android:padding="10dp"
+      binding:enableBarPadding="@{0}"
+      binding:statusBar="@{StatusBar.statusBar(null)}"
       android:background="@drawable/background"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-      <include
-          layout="@layout/title" />
-
-      <RelativeLayout
-          android:id="@+id/mediaPlayTopRL"
-          android:layout_alignParentTop="true"
-          android:layout_width="match_parent"
-          android:visibility="gone"
-          android:layout_marginTop="10dp"
-          android:padding="5dp"
-          android:layout_height="wrap_content">
-        <ImageView
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/ic_back"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-          <ImageView
-              android:layout_alignParentRight="true"
-              android:layout_centerVertical="true"
-              android:src="@drawable/menu_normal"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:orientation="vertical"
-            android:layout_centerHorizontal="true"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textColor="@color/textTitle"
-                android:textSize="@dimen/textTitle"
-                android:text="@{vm.playing.title}"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:textColor="@color/textTitle"
-                android:textSize="@dimen/textSmall"
-                android:text="@{vm.playing.artist}"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-      </RelativeLayout>
       <com.merlin.view.MediaPlayDisplayLayout
-          android:layout_below="@id/mediaPlayTopRL"
-          android:id="@+id/activityMediaPlay_displayRV"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
   </RelativeLayout>
