--- a/app/src/main/res/layout/status_icon.xml
+++ b/app/src/main/res/layout/status_icon.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:binding="http://schemas.android.com/apk/res-auto">
     <data>
-        <variable
-            name="listener"
-            type="android.view.View.OnClickListener" />
     </data>
     <ImageView
-        android:onClickListener="@{listener}"
+        binding:enableModelClick="@{true}"
         android:layout_width="30dp"
         android:layout_height="30dp"/>
 </layout>
