--- a/app/src/main/res/layout/media_display_sheets.xml
+++ b/app/src/main/res/layout/media_display_sheets.xml
@@ -22,6 +22,11 @@
                 android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="全部"
+                    style="@style/titleNormalTextView"/>
+
                 <TextView
                     android:text="推荐"
                     style="@style/titleNormalTextView"/>
