--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,14 +9,18 @@
         <item name="android:gravity">center</item>
     </style>
     <style name="editTextNormal" parent="titleNormalTextView">
-         <item name="android:paddingLeft">10dp</item>
-         <item name="android:paddingRight">10dp</item>
          <item name="android:layout_width">match_parent</item>
          <item name="android:layout_height">wrap_content</item>
-         <item name="android:background">@android:color/transparent</item>
+         <item name="android:minHeight">43dp</item>
+         <item name="android:background">#3000</item>
     </style>
 
     <style name="checkboxStyle" parent="@android:style/Widget.CompoundButton.CheckBox">
         <item name="android:button">@drawable/checkbox</item>
+    </style>
+    <style name="buttonStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/round_corner_small</item>
     </style>
 </resources>
