--- a/app/src/main/res/layout/medias_all.xml
+++ b/app/src/main/res/layout/medias_all.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-       <EditText
-           style="@style/editTextNormal"/>
-       <Button
-           android:text="@string/search"
-           style="@style/buttonStyle"
-           android:layout_marginRight="15dp"
-           android:layout_alignParentRight="true"
-           android:layout_centerVertical="true"/>
-   </RelativeLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:binding="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="vm"
+            type="com.merlin.model.MediasAllModel" />
+        <import type="com.merlin.binding.Adapter"/>
+    </data>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                style="@style/editTextNormal"/>
+            <Button
+                android:text="@string/search"
+                style="@style/buttonStyle"
+                android:layout_marginRight="15dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            binding:adapter="@{Adapter.adapter()}"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+</layout>
