--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,8 @@
     <style name="editTextNormal" parent="titleNormalTextView">
          <item name="android:layout_width">match_parent</item>
          <item name="android:layout_height">wrap_content</item>
+         <item name="android:focusable">true</item>
+         <item name="android:focusableInTouchMode">true</item>
          <item name="android:minHeight">43dp</item>
          <item name="android:background">#3000</item>
     </style>
@@ -21,6 +23,8 @@
     <style name="buttonStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/textTitle</item>
+        <item name="android:padding">6dp</item>
         <item name="android:background">@drawable/round_corner_small</item>
     </style>
 </resources>
